Web Inspector: REGRESSION(?): Sources: override banner is squished for large images https://bugs.webkit.org/show_bug.cgi?id=218196
Reviewed by Devin Rousso.

Progressions made in https://trac.webkit.org/changeset/266695/webkit caused the image container to occupy the
maximum amount of space possible, which caused the override banner to be squished and a scrollbar to appear.
This is resolved by making sure the minimum dimensions of the image containers are 0, so that the container can
be `flex-shrink`ed.

* UserInterface/Views/ImageResourceContentView.css:
(.content-view.resource.image > .img-container):


Canonical link: https://commits.webkit.org/231267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269438 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/ImageResourceContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ImageResourceContentView.css
@@ -43,6 +43,8 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    min-width: 0;
+    min-height: 0;
     padding: 15px;
 }
 
